# ladybugdb

./: CMakeLists.txt
.github/workflows/: build-and-deploy.yml  build-extensions.yml  ci-musl-test-workflow.yml  ci-workflow.yml  java-workflow.yml  nodejs-workflow.yml  precompiled-bin-workflow.yml  python-wheel-workflow.yml
cmake/: BundleStaticLibrary.cmake
docs/: art_index.md  icebug-disk.md  index_build_recovery.md  multi_parent_lifetime.md
scripts/: generate_wal_typespec.py  pgembed_ladybug_sample_query.py
scripts/pip-package/: setup.py
src/c_api/: connection.cpp  version.cpp
src/catalog/: catalog.cpp  catalog_set.cpp
src/function/: function_collection.cpp
src/graph/: on_disk_graph.cpp
src/main/: client_context.cpp  database.cpp
src/optimizer/: filter_push_down_optimizer.cpp
src/storage/: storage_manager.cpp
src/storage/wal/: CMakeLists.txt  local_wal.cpp  wal_record.cpp  wal_replayer.cpp
src/storage/wal/records/: alter_table_entry_record.cpp  begin_transaction_record.cpp  checkpoint_record.cpp  commit_record.cpp  copy_table_record.cpp  create_catalog_entry_record.cpp  create_catalog_entry_record_replay.cpp  create_index_record.cpp  create_index_record_replay.cpp  drop_catalog_entry_record.cpp  load_extension_record.cpp  node_deletion_record.cpp  node_update_record.cpp  rel_deletion_record.cpp  rel_detach_delete_record.cpp  rel_update_record.cpp  table_insertion_record.cpp  update_sequence_record.cpp
src/storage/wal/typespec/: README.md  common.tsp
src/storage/wal/typespec/records/: alter_table_entry_record.tsp  begin_transaction_record.tsp  checkpoint_record.tsp  commit_record.tsp  copy_table_record.tsp  create_catalog_entry_record.tsp  create_index_record.tsp  drop_catalog_entry_record.tsp  load_extension_record.tsp  node_deletion_record.tsp  node_update_record.tsp  rel_deletion_record.tsp  rel_detach_delete_record.tsp  rel_update_record.tsp  table_insertion_record.tsp  update_sequence_record.tsp
src/storage/wal/typespec/templates/: wal_record_header.h.j2  wal_record_source.cpp.j2
src/transaction/: transaction_manager.cpp
test/api/: CMakeLists.txt  arrow_test.cpp  file_search_path_test.cpp
test/graph_test/: private_graph_test.cpp
test/include/: test_env.h
test/planner/: cardinality_test.cpp
test/storage/: ice_disk_utils_test.cpp
test/test_files/: storage_version.test
test/test_helper/: test_helper.cpp
test/test_runner/: fsm_leak_checker.cpp  test_parser.cpp
test/transaction/: checkpoint_test.cpp
tools/wal_dump/: main.cpp
(+67 files in other folders)
